--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.universitytest2">
+    package="com.angelightmedia.universitytest2">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/naij_uni_dir_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/naij_uni_dir_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UniversityTest2">
-        <activity android:name=".School_Details"></activity>
-        <activity android:name=".FedSchoolsActivity" />
-        <activity android:name=".MainActivity">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6382357069953575~9589837027"
+            />
+        <meta-data
+            android:name="google_analytics_default_allow_analytics_storage"
+            android:value="true"/>
+
+        <activity android:name="com.angelightmedia.universitytest2.PrivateSchools" />
+        <activity android:name="com.angelightmedia.universitytest2.StateSchools" />
+        <activity android:name="com.angelightmedia.universitytest2.School_Details" />
+        <activity android:name="com.angelightmedia.universitytest2.FedSchoolsActivity" />
+        <activity android:exported="true" android:name="com.angelightmedia.universitytest2.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
